--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
+      content="width=device-width, initial-scale=1.0,maximum-scale=1.4"
     />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -36,13 +35,6 @@
     -->
     <title>React App</title>
   </head>
-  <style>
-    html,
-    body {
-      max-width: 100%;
-      overflow-x: hidden;
-    }
-  </style>
   <body>
     <noscript
       >You need to enable JavaScript to run this
