--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>유애드</title>
   </head>
   <body>
-    <noscript
-      >You need to enable JavaScript to run this
-      app.</noscript
-    >
+    <noscript>내게 필요한 광고 매칭 플랫폼</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
