--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
@@ -53,6 +54,7 @@
         }
       })(window.location);
     </script>
+    <!-- End Single Page Apps for GitHub Pages -->
     <title>유애드</title>
   </head>
   <body>
